infrastructure/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.monitoring.analysis.devsquare.ru
    http:
      paths:
      - path: /
        pathType: Path
        backend: 
          service: 
            name: kafka-ui
            port: 
              number: 80
